--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,20 @@
 asgiref==3.5.2
 autopep8==1.6.0
+boto3==1.26.42
+botocore==1.29.42
 dj-database-url==1.2.0
 Django==4.0.5
+django-storages==1.13.2
+jmespath==1.0.1
 Pillow==9.1.1
 pycodestyle==2.8.0
+python-dateutil==2.8.2
+s3transfer==0.6.0
+six==1.16.0
 sqlparse==0.4.2
 toml==0.10.2
 tzdata==2022.1
+urllib3==1.26.13
 psycopg2>=2.8
 whitenoise==6.2.0
 gunicorn==20.1.0
